--- a/scss/base/_main-settings.scss
+++ b/scss/base/_main-settings.scss
@@ -1,7 +1,7 @@
 html {
   font-size: 62.5%;
 
-  color: white;
+  color: $main-color;
 }
 
 * {
@@ -15,7 +15,14 @@ html {
 }
 
 body {
-  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  height: 100vh;
+
+  padding: 20px;
 
   background:url(/GitHub-repositories/media/wallpapersden.com_mountain-retreat_5120x2880.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
