#3: added username, password sections and login button

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -43,8 +43,11 @@ $xxl-font-size: 5rem;
 
 // Color
 
-$main-color: #FFFFFF;
-$main-color-dark: #b5b5b5;
+$primary-color: #FFFFFF;
+$background-color: #222831;
+$background-color-dark: #393E46;
+$background-color-light: #9FB1BCFF;
+$secondary-color: #D3D0CBFF;
 
 // Transition 
 
