--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -5,7 +5,7 @@
     font-family: $poppins-bold;
     font-size: $lg-font-size;
 
-    color: $main-color;
+    color: $primary-color;
 
     cursor: pointer;
   }
