--- a/scss/base/_main-settings.scss
+++ b/scss/base/_main-settings.scss
@@ -1,7 +1,7 @@
 html {
   font-size: 62.5%;
 
-  color: $main-color;
+  color: $primary-color;
 }
 
 * {
@@ -22,14 +22,9 @@ body {
 
   height: 100vh;
 
-  padding: 20px;
+  padding: 1.5rem 2.5rem;
 
-  background:url(/GitHub-repositories/media/wallpapersden.com_mountain-retreat_5120x2880.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: $background-color;
 
   text-rendering: optimizeSpeed;
   line-height: 1.5;
