--- a/scss/layouts/_main.scss
+++ b/scss/layouts/_main.scss
@@ -1,5 +1,6 @@
 .main {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
@@ -8,4 +9,14 @@
   height: 100%;
   
   overflow: auto;
+
+  &__title {
+    font-family: $poppins-bold;
+    font-size: $title-font-size;
+  }
+
+  &__description {
+    font-family: $poppins-semibold;
+    font-size: $xl-font-size;
+  }
 }
