#7: corrected position of searcher on the page

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -11,8 +11,7 @@ $margin-center: 0 auto;
 
 // Border 
 
-$border-bottom-primary: 2px solid #950740;
-$border-bottom-secondary: 2px solid transparent;
+$border-primary: 2px solid #c3073f;
 
 // Border-radius 
 
@@ -44,10 +43,11 @@ $xxl-font-size: 5rem;
 // Color
 
 $primary-color: #FFFFFF;
-$background-color: #222831;
-$background-color-dark: #393E46;
+$background-color: #1a1a1d;
+$background-color-dark: #4e4e50;
 $background-color-light: #9FB1BCFF;
-$secondary-color: #D3D0CBFF;
+$secondary-color: #6f2232;
+$secondary-color-lighter: #c3073f;
 
 // Transition 
 
