--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -3,7 +3,7 @@
 
   padding: 1.5rem;
 
-  background-color: $primary-color;
+  background-color: $secondary-color-lighter;
 
   border: none;
   border-radius: 10rem;
@@ -12,7 +12,7 @@
   font-size: $xs-font-size;
   text-align: center;
 
-  color: $background-color;
+  color: $primary-color;
 
   cursor: pointer;
 
