--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,8 @@
 @import "./components/header";
 @import "./components/form";
 @import "./components/button";
+@import "./components/repo";
+@import "./components/searcher";
 
 // Layouts
 
